--- a/Lesson11-Completeing-The-UI/T11.02-Exercise-DataBinding/app/build.gradle
+++ b/Lesson11-Completeing-The-UI/T11.02-Exercise-DataBinding/app/build.gradle
@@ -1,15 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 27
 
     defaultConfig {
         applicationId "com.example.android.boardingpass"
-        minSdkVersion 10
-        targetSdkVersion 25
+        minSdkVersion 17
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+        vectorDrawables.useSupportLibrary=true
+
     }
 
     buildTypes {
@@ -17,12 +18,16 @@ android {
             minifyEnabled false
         }
     }
+    // Enable dataBinding
+    dataBinding.enabled = true
 
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:25.1.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
-    // TODO (1) Enable Data Binding in your application
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support:support-vector-drawable:27.0.2'
 }
