--- a/Lesson10-Hydration-Reminder/T10.01-Exercise-IntentServices/app/src/main/AndroidManifest.xml
+++ b/Lesson10-Hydration-Reminder/T10.01-Exercise-IntentServices/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.android.background">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.android.background">
 
     <application
         android:allowBackup="true"
@@ -20,6 +21,10 @@
 
         <!-- TODO (14) Declare WaterReminderIntentService in the Manifest and set the exported
          attribute to false-->
+        <service
+                 android:name=".sync.WaterReminderIntentService"
+                 android:exported="false"
+            tools:ignore="InnerclassSeparator" />
 
     </application>
 </manifest>
