--- a/Lesson11-Completeing-The-UI/T11.03-Exercise-LandscapeLayout/app/build.gradle
+++ b/Lesson11-Completeing-The-UI/T11.03-Exercise-LandscapeLayout/app/build.gradle
@@ -9,6 +9,7 @@ android {
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+        multiDexEnabled=true
         vectorDrawables.useSupportLibrary=true
     }
 
@@ -23,6 +24,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support:support-vector-drawable:27.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta5'
