--- a/Lesson10-Hydration-Reminder/T10.02-Exercise-CreateNotification/app/build.gradle
+++ b/Lesson10-Hydration-Reminder/T10.02-Exercise-CreateNotification/app/build.gradle
@@ -2,13 +2,14 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    buildToolsVersion "26.0.3"
     defaultConfig {
         applicationId "com.example.android.background"
-        minSdkVersion 14
+        minSdkVersion 18
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
+        vectorDrawables.useSupportLibrary=true
     }
     buildTypes {
         release {
@@ -18,6 +19,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:26.0.1'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:support-vector-drawable:26.1.0'
 }
